# p4-user-dashboard

./: .gitignore  README.ja.md  README.md  aggregator.py  config.json  config.py  dashboard.py  main.py  p4_connector.py  pyproject.toml  requirements.txt
configs/: test-config.json
demo/: config.json  generate_demo.py  setup.sh
demo/checkpoints/: bangalore-tools.ckp  fukuoka-online.ckp  la-mocap.ckp  nagoya-art.ckp  osaka-dev.ckp  seoul-mobile.ckp  shanghai-loc.ckp  singapore-qa.ckp  tokyo-platform.ckp  tokyo-prod.ckp
scripts/: restore_servers.sh  set_access_times.py  setup_test_servers.sh  snapshot_servers.sh
static/: app.js  style.css
templates/: index.html
tests/: conftest.py  test_aggregator.py  test_api.py  test_config.py  test_p4_connector.py
